ecmascript/parser/tests/test262-error-references/fail/23368c25ea374e2f.js.stderr
error: Cannot assign to this
 --> $DIR/tests/test262-parser/fail/23368c25ea374e2f.js:1:1
  |
1 | (a,b)=(c,d);
  | ^^^^^

